# leptos-rocket-todo-app

./: .gitignore  start.sh
backend/: .env  Cargo.toml  todos.db
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/style/: style.css  style.scss
